Fixed z-index issue

--- a/css/helpers.css
+++ b/css/helpers.css
@@ -4,7 +4,7 @@
 }
 
 /* HELPER CLASSES - MISC PROPERTIES */
-.relative       {position: relative; z-index: -1;}
+.relative       {position: relative; z-index: 0;}
 .w-max-content  {width: max-content;}
 .w-100          {width: 100%;}
 .h-100          {height: 100%;}
